--- a/content/data/config.json
+++ b/content/data/config.json
@@ -84,5 +84,6 @@
                 "new_window": true
             }
         ]
-    }
+    },
+    "domain": "https://smart-lettuce-85b7b.netlify.app"
 }
